--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,9 +14,9 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>{title} | Sunshine Coast Council</title>
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <slot />
   </body>
 </html>
