add animation to main page

--- a/src/components/BeachTable.astro
+++ b/src/components/BeachTable.astro
@@ -43,7 +43,8 @@
     align-items: stretch;
     position: relative;
     overflow: auto;
-    border-radius: 10rem;
+    /* border-radius: 10rem; */
+    background: #b2d9eb;
   }
 
   td {
