--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,11 +14,11 @@ enum Theme {
   Dark,
 }
 
-const { selection, theme = Theme.Light } = Astro.props;
+const { selection, theme = Theme.Dark } = Astro.props;
 ---
 
 {
-  theme == Theme.Light ? (
+  theme == Theme.Dark ? (
     <nav class="w-full h-full pt-[36px] flex flex-row justify-between items-center">
       <img
         src="council-logo-clear-jpeg.png"
@@ -37,13 +37,13 @@ const { selection, theme = Theme.Light } = Astro.props;
       </ul>
     </nav>
   ) : (
-    <nav class="w-full h-full pt-[36px] flex flex-row justify-between items-center">
+    <nav class="w-full h-full flex flex-row justify-between items-center">
       <img
         src="council-logo-clear-jpeg.png"
         alt="Council Logo"
-        class="w-[303px]"
+        class="w-[303px] bg-primary"
       />
-      <ul class="flex flex-row justify-between items-center gap-10 text-textdark text-[24px]">
+      <ul class="flex flex-row justify-between items-center gap-10 text-text text-[24px]">
         <li class={selection == Selected.Home ? "" : "opacity-50"}>
           <a href="/">Home</a>
         </li>
