--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,4 +41,24 @@ const { title } = Astro.props;
   html {
     font-family: system-ui, sans-serif;
   }
+  /* width */
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #b2d9eb;
+    border-radius: 50px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #46ceb5;
+  }
 </style>
