--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -43,7 +43,7 @@ const { selection, theme = Theme.Dark } = Astro.props;
         alt="Council Logo"
         class="w-[303px] bg-primary"
       />
-      <ul class="flex flex-row justify-between items-center gap-10 text-text text-[24px]">
+      <ul class="flex flex-row justify-between items-center gap-10 text-textdark text-[24px]">
         <li class={selection == Selected.Home ? "" : "opacity-50"}>
           <a href="/">Home</a>
         </li>
