--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,19 +18,61 @@ const { title } = Astro.props;
   </head>
   <body class="overflow-x-hidden">
     <slot />
+    <footer
+      class="w-full grid grid-cols-6 grid-rows-1 bg-primary pl-[86.8px] pr-[100px] pt-10 pb-10"
+    >
+      <div class="col-span-3 flex items-center">
+        <img
+          src="council-logo-clear-jpeg.png"
+          alt="Council Logo"
+          class="w-[200px] h-[73.61px]"
+        />
+        <div class="flex gap-4 flex-col pl-5">
+          <p class="text-[.75rem] text-textdark">
+            Sunshine Coast Council acknowledges the Sunshine Coast Country, home
+            of the Kabi Kabi peoples and the Jinibara peoples, the Traditional
+            Custodians, whose lands and waters we all now share.
+          </p>
+          <p class="text-[.75rem] text-textdark">
+            We commit to working in partnership with the Traditional Custodians
+            and the broader First Nations (Aboriginal and Torres Strait
+            Islander) community to support self-determination through economic
+            and community development.
+          </p>
+        </div>
+      </div>
+      <div
+        class="col-span-3 flex flex-row justify-end gap-10 items-center text-textdark"
+      >
+        <ul class="flex gap-1 flex-col">
+          <li><a href="">Council Offices</a></li>
+          <li><a href="">General Contacts</a></li>
+          <li><a href="">Councillor contacts</a></li>
+          <li><a href="">Development Contacts</a></li>
+        </ul>
+        <div class="flex justify-between flex-col h-full max-h-[108px]">
+          <p class="font-semibold">Site help & accessibility</p>
+          <ul>
+            <li><a href="">Website support</a></li>
+            <li><a href="">Accessibility</a></li>
+            <li><a href="">SCC App</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
 <style is:global>
   @import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Montserrat:wght@500;700&family=Rowdies:wght@300;400;700&display=swap");
   @import url("https://fonts.googleapis.com/css2?family=Inter&family=Lato:wght@700&family=Montserrat:wght@500;700&family=Rowdies:wght@300;400;700&display=swap");
   :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
+    --accent: #46ceb5;
+    --accent-light: #b2d9eb;
     --accent-dark: 49, 10, 101;
     --accent-gradient: linear-gradient(
       45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
+      var(--accent),
+      var(--accent-light),
       white 60%
     );
   }
