hopefully final changes

--- a/src/pages/beach.astro
+++ b/src/pages/beach.astro
@@ -89,7 +89,7 @@ const beachData = data.features;
         <BeachTable />
       </div>
       <div class="flex gap-3 flex-col w-[75%] justify-center">
-        <h1 class="font-rowdies text-text text-[72px] max-w-[20ch] text-right">
+        <h1 class="font-rowdies text-text text-[72px] text-right">
           Prefer it in a table?
         </h1>
         <p class="font-inter text-text text-[20px] text-right">
